# HackageCompareStats

./: .ghci  .gitignore  ArchPackageCompareStats.cabal  ChangeLog.md  HackageCompareStats.cabal  README.md  ScottyAttempt.cabal  ghcid.sh
src/: Common.hs  CompareForm.hs  CompareFormJson.hs  CompareFormTemplate.hs  Main.hs  Main2.hs  Render.hs  Routes.hs  Test.hs  Test2.hs  UserError.hs
templates/: .#userError.tpl  compareForm.js  compareForm.tpl  compareform.js  test.tpl  userError.tpl
templates/cache/: .keepme
templates/heist/: compareForm.tpl  compareFormForm.tpl  featured.tpl  userError.tpl
