name:                 HackageCompareStats
version:              0.1.0.1
license:              BSD3
license-file:         LICENSE
author:               Chris Stryczynski
build-type:           Simple
extra-source-files:   ChangeLog.md
cabal-version:        >=1.10
extra-source-files:   templates/*.js
                    , templates/heist/*.tpl
                    , templates/cache/.keepme
executable webserver
  main-is:             Main.hs
  other-modules:       Common
                     , CompareForm
                     , CompareFormJson
                     , CompareFormTemplate
                     , Render
                     , UserError
  hs-source-dirs:      src, templates
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , HUnit
                     , scotty
                     , wai-extra
                     , mtl
                     , random
                     , http-types
                     , text
                     , HackageDownloadStatsScraper >= 0.2.0.0
                     , string-conversions
                     , heist
                     , mustache
                     , xmlhtml
                     , map-syntax
                     , bytestring
                     , hashmap
                     , aeson
                     , directory
                     , time
                     , transformers
                     , wai
                     , binary
source-repository    head
  type:              git
  location:          git@github.com:chrissound/ArchPackageCompareStats.git
