name:                ScottyAttempt
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Stryczynski
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable SA
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , HUnit
                     , scotty
                     , wai-extra
                     , mtl
                     , random
                     , http-types
                     , text
                     , ArchPkgstatsScraper
                     , string-conversions
                     , heist
                     , mustache
                     , xmlhtml
                     , map-syntax
                     , bytestring
                     , hashmap
                     , aeson

executable SATest
  main-is:             Test.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10
                     , HUnit
                     , scotty
                     , wai-extra
                     , mtl
                     , random
                     , http-types
                     , text
                     , ArchPkgstatsScraper
                     , string-conversions
                     , heist
                     , mustache
                     , xmlhtml
                     , map-syntax
                     , bytestring
                     , hashmap
                     , aeson